# garefl

./: .gitignore  Makeconf.in  Makefile  README  RELEASE-NOTES  autogen.sh  ax_cflags_warn_all.m4  configure  configure.in  qfit  release.sh
boxmin/: Makefile  README  amoeba.c  amoeba.h  nlls.c  nlls.h
boxmin/examples/: .cvsignore  Makefile  gaussfit.ic  peaks.ic  randmtzig.ic  test_amoeba.c  test_nlls.c
boxmin/levmar/: Axb.c  Axb_core.c  Makefile  README.txt  lm.c  lm.h  lm_core.c  lm_uct.c  lmbc.c  lmbc_core.c  lmdemo.c  lmlec.c  lmlec_core.c  misc.c  misc.h  misc_core.c
doc/: ga_refl.doc  garefl.html.in
examples/: Makefile  Makefile.dist  Makefile.template
examples/incoherent/: setup.c  wc01.yor  wc02.yor
examples/multimag/: .cvsignore  f109+115bf.qa  f109+115bf.qb  f109+115bf.qc  f109+115bf.qd  f128+134bf.qa  f128+134bf.qb  f128+134bf.qc  f128+134bf.qd  f159+160bf.qa  f159+160bf.qb  f159+160bf.qc  f159+160bf.qd  f167+169bf.qa  f167+169bf.qb  f167+169bf.qc  f167+169bf.qd  f239+245bf.qa  f239+245bf.qb  f239+245bf.qc  f239+245bf.qd  f257+264bf.qa  f257+264bf.qb  f257+264bf.qc  f257+264bf.qd  f49+55bf.qa  f49+55bf.qb  f49+55bf.qc  f49+55bf.qd  setup.c
examples/volfrac/: setup.c  wc03.yor
examples/xray/: README.txt  setup.c
model1d/: Makefile  bspline.c  bspline.h  data.c  data.h  dgtsv.f  fit.c  fit.h  fresnel.cc  interface.c  interface.h  magnetic.cc  model.c  model.h  pars.c  pars.h  profile.c  profile.h  r4x.f  r4xa.f  refl.h  reflcalc.h  reflconfig.h.in  reflectivity.cc  reflrough.cc  resolution.c  sgtsv.f
src/: Makefile  bestpar.py  cmd_nlls.c  fixpar.py  ga.c  ga.h  ga_simul.c  gaplot  pysetup.cc  refl1d.c  setup.py
